@@ -2,6 +2,19 @@
 
 	Backported from mainline.
 
+	2012-12-11  Jakub Jelinek  <jakub@redhat.com>
+
+	* sanitizer.def (BUILT_IN_ASAN_HANDLE_NO_RETURN): New builtin.
+	* asan.c (instrument_builtin_call): Change is_gimple_builtin_call
+	gcc_assert to gcc_checking_assert.
+	(maybe_instrument_call): Imit __builtin___asan_handle_no_return ()
+	before noreturn calls other than __builtin_trap () and
+	__builtin_unreachable ().
+
+2013-06-24  Manjunath Matti <mmatti@caviumnetworks.com>
+
+	Backported from mainline.
+
 	2012-06-04  Richard Guenther  <rguenther@suse.de>
 	Eric Botcazou  <ebotcazou@adacore.com>
 
